@@ -494,7 +494,7 @@
                 <version>${surefire-plugin.version}</version>
                 <configuration>
                     <!-- @{argLine} preserves JaCoCo's injected agent arg -->
-                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Xshare:off --enable-native-access=ALL-UNNAMED</argLine>
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                     </excludes>
